--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
@@ -33,6 +34,8 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
-    "vite": "^7.2.4"
+    "jsdom": "^27.4.0",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.17"
   }
 }
