--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:8000",
+  "proxy": "https://taskmernbackend1-vcx6jfnr.b4a.run",
   "type": "module",
   "scripts": {
     "dev": "vite",
